fix: correctly select task after collapsing

--- a/src/styles/TaskList.css
+++ b/src/styles/TaskList.css
@@ -4,7 +4,6 @@
 }
 
 .task-block-container {
-  margin: 20px;
   border-radius: 10px;
   height: auto;
   min-height: 80px;
